syntax = "proto3";

package trade;

option go_package = "github.com/ramseyjiang/go-micros/sales/trade;trade";

import "google/protobuf/wrappers.proto";

service SalesService {
  rpc CreateSale(CreateSaleRequest) returns (CreateSaleResponse) {}
  // Add other RPCs for discounts, etc.
}

message CreateSaleRequest {
  repeated LineItem line_items = 1;
  float discountAmount = 2; // Flat discount amount on the total sale
}

message LineItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CreateSaleResponse {
  string sale_id = 1;
  repeated LineItem line_items = 2;
  google.protobuf.FloatValue total_price = 3;
}